# mini-badger

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml
resources/: Info.plist
src/: app_monitor.rs  config.rs  main.rs
